--- a/style.css
+++ b/style.css
@@ -579,9 +579,9 @@ section .title::after{
 
 
 
-/* teams section styling */
+/* certification section styling */
 
-.teams .carousel .card{
+.certification .carousel .card{
     /* background: #222; */
     border-radius: 6px;
     padding: 25px 35px;
@@ -589,25 +589,25 @@ section .title::after{
     overflow: hidden;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover{
+.certification .carousel .card:hover{
     background: #B0C4DE;
 }
-.teams .carousel .card .box{
+.certification .carousel .card .box{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover .box{
+.certification .carousel .card:hover .box{
     transform: scale(1.05);
 }
-.teams .carousel .card .text{
+.certification .carousel .card .text{
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
 }
-.teams .carousel .card img{
+.certification .carousel .card img{
     height: 150px;
     width: 150px;
     object-fit: cover;
@@ -615,7 +615,7 @@ section .title::after{
     border: 5px solid #1029a3;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover img{
+.certification .carousel .card:hover img{
     border-color: #fff;
 }
 .owl-dots{
