--- a/style.css
+++ b/style.css
@@ -247,21 +247,23 @@ section .title::after{
   margin-right: 0;
 }
 .home .home-content .text-1{
-    font-size: 20px;
+	
+    font-size: 27px;
 	margin-left: 5px;
 }
 .home .home-content .text-2{
-    font-size: 30px;
+    font-size: 75px;
     font-weight: 600;
     margin-left: 5px;
 }
 .home .home-content .text-3{
     font-size: 40px;
-    margin: 5px 0;
+    margin: 5px;
+	
 }
 .home .home-content .text-3 span{
     color: #1029a3;
-    font-weight: 500;
+    font-weight: 800;
 }
 .home .home-content a{
     display: inline-block;
@@ -435,7 +437,6 @@ section .title::after{
 .skills-content .right .rprogramming::before{
     width: 50%;
 }
-
 
 .skills-content .right .dalib::before{
     width: 65%;
