--- a/style.css
+++ b/style.css
@@ -230,6 +230,7 @@ section .title::after{
 /* home section styling */
 
 	.home{
+		-webkit-touch-callout: none;
     display: flex;
     background: url("images/banner.jpg") no-repeat center;
     height: 100vh;
@@ -888,17 +889,7 @@ footer span a:hover{
     }
 }
 
-@supports (-webkit-touch-callout: none){
-.home{
-    display: flex;
-    background: url("images/banner.jpg") no-repeat center;
-    height: 100vh;
-    color: #fff;
-    min-height: 500px;
-    background-size: cover;
-    background-attachment: fixed;
-    font-family: "Lucida Console", Courier, monospace;
-}}
+
 
 
 /* End Keyframes */
